completed menu.html for mobile

--- a/menu.html
+++ b/menu.html
@@ -230,20 +230,82 @@
                 <a class="content6-atag" id="content6-atag24" href="#">S<br>16</a>
                 <p id="content6-ptag8">Organic tomato sauce, pepperoni + mozzarella.
                 </p>
-                
 
+                <img id="content6-img9" src="meatpizza9.jpg" alt="meat pizza nine">
+                <h4 id="content6-h4nine">New York Deli</h4>
+                <a class="content6-atag" id="content6-atag25" href="#">L<br>$25</a>
+                <a class="content6-atag" id="content6-atag26" href="#">M<br>$18.50</a>
+                <a class="content6-atag" id="content6-atag27" href="#">S<br>17</a>
+                <p id="content6-ptag9">Organic tomato sauce, pepperoni, Genoa salami, bacon, Canadian ham, spicy Italian
+                    sausage, mozzarella + cheddar.
+                </p>
 
+                <img id="content6-img10" src="meatpizza10.jpg" alt="meat pizza ten">
+                <h4 id="content6-h4ten">Tropical Hawaiian</h4>
+                <a class="content6-atag" id="content6-atag28" href="#">L<br>$24</a>
+                <a class="content6-atag" id="content6-atag29" href="#">M<br>$17.50</a>
+                <a class="content6-atag" id="content6-atag30" href="#">S<br>16</a>
+                <p id="content6-ptag10">Sweet + smoky tropical sauce, bacon, Canadian ham, pineapple,cheddar.
+                </p>
 
+                <img id="content6-img11" src="meatpizza11.jpg" alt="meat pizza eleven">
+                <h4 id="content6-h4eleven">True Canadian
+                </h4>
+                <a class="content6-atag" id="content6-atag31" href="#">L<br>$23</a>
+                <a class="content6-atag" id="content6-atag32" href="#">M<br>$18.50</a>
+                <a class="content6-atag" id="content6-atag33" href="#">S<br>14</a>
+                <p id="content6-ptag11">A summer classic, stacked with organic tomato sauce, extra pepperoni, bacon and cheddar.
 
+                </p>
 
+                <img id="content6-img12" src="meatpizza12.jpg" alt="meat pizza twelve">
+                <h4 id="content6-h4twelve">Spicy Capicolo
+                </h4>
+                <a class="content6-atag" id="content6-atag34" href="#">L<br>$23</a>
+                <a class="content6-atag" id="content6-atag35" href="#">M<br>$18.50</a>
+                <a class="content6-atag" id="content6-atag36" href="#">S<br>14</a>
+                <p id="content6-ptag12">A summer classic,extra pepperoni, bacon and cheddar.
 
+                </p>
 
+                <img id="content6-img13" src="meatpizza13.jpg" alt="meat pizza thirteen">
+                <h4 id="content6-h4thirteen">Philly Steak
+                </h4>
+                <a class="content6-atag" id="content6-atag37" href="#">L<br>$23</a>
+                <a class="content6-atag" id="content6-atag38" href="#">M<br>$18.50</a>
+                <a class="content6-atag" id="content6-atag39" href="#">S<br>14</a>
+                <p id="content6-ptag13">Jalapeño white sauce, steak,peppers, sautéed mushrooms + mozzarella..
 
+                </p>
 
+                <img id="content6-img14" src="meatpizza14.jpg" alt="meat pizza fourteen">
+                <h4 id="content6-h4fourteen">Beef Taco
 
+                </h4>
+                <a class="content6-atag" id="content6-atag40" href="#">L<br>$24</a>
+                <a class="content6-atag" id="content6-atag41" href="#">M<br>$19.50</a>
+                <a class="content6-atag" id="content6-atag42" href="#">S<br>15</a>
+                <p id="content6-ptag14">Fresh salsa, ground beef, red onions, mozzarellafresh tomatoes + cheddar.
 
+                </p>
+            </div>
+        </div>
+        <div id="footer">
+
+            <h5 id="footerh5-one">@copyright2020,OkotoksPizza.ca</h5>
+            <div id="footerdiv-one">
+                <a href="https://www.facebook.com/"><img width="3%" src="facebookicon.png" alt="facebook icon"></a>
+                <a href="https://twitter.com/"><img width="3%" src="twittericon.png" alt="twitter icon"></a>
+                <a href="https://www.instagram.com/"><img width="3%" src="instagram.png" alt="instagram icon"></a>
+                <a href="mailto:info@okotokspizza.ca"><img width="3%" src="email.png" alt="email icon"></a>
+                <a href="https://www.consumeraffairs.com/food/pizza-hut.html"><img width="3%" src="review.png"
+                        alt="review icon"></a>
 
             </div>
+            <h5 id="footerh5-two">Powered by:OkotoksPizza.ca</h5>
+
+
+
         </div>
     </div>
 </body>
