Added menu page for tablet

--- a/menu.html
+++ b/menu.html
@@ -16,7 +16,7 @@
         content="https://www.google.com/search?q=pizza+images&tbm=isch&source=iu&ictx=1&fir=bOy5OMwKTM1UEM%252CrPoPHMiEf84VrM%252C_&vet=1&usg=AI4_-kR6eBstLdK_bTMsEEijrm3Z4gKGhw&sa=X&ved=2ahUKEwiH_7D8oNPqAhUYIDQIHSjPBnwQ9QEwAXoECAoQMg&biw=1366&bih=646">
     <link rel="icon" type="image/png" href="fast-food.png" />
     <link rel="stylesheet" type="text/css" href="style2.css">
-
+    <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@900&family=Source+Serif+Pro:ital,wght@1,900&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -74,7 +74,7 @@
                 <img id="content4-img2" src="vegpizza2.jpg" alt="veggie pizza two">
                 <h4 id="content4-h4two">Veggie Mediterranean</h4>
                 <a class="contentfour-atag" id="content4-atag4" href="#">L<br>$22</a>
-                <a class="contentfour-atag" id="content4-atag5" href="#">M<br>$18</a>
+                <a class="contentfour-atag" id="content4-atag5" href="#">M<br>$18.50</a>
                 <a class="contentfour-atag" id="content4-atag6" href="#">S<br>15</a>
                 <p id="content4-ptag2">Organic tomato sauce, fire-roasted tomatoes, kalamata olives, red peppers, baby
                     spinach leaves, red
@@ -145,14 +145,6 @@
                 <a class="content5-atag" id="content5-atag12" href="#">S<br>13</a>
                 <p id="content5-ptag4">Organic tomato sauce, chilli flakes, Beyond Meat Italian sausage crumble, red
                     onions, red peppers, fire-roasted tomatoes, hot banana peppers + dairy-free Daiya cheeze.</p>
-
-                <img id="content5-img5" src="vegpizza11.jpg" alt="plant-based pizza five">
-                <h4 id="content5-h4five">Beyond Summer<br> BBQ</h4>
-                <a class="content5-atag" id="content5-atag13" href="#">L<br>$21</a>
-                <a class="content5-atag" id="content5-atag14" href="#">M<br>$17.50</a>
-                <a class="content5-atag" id="content5-atag15" href="#">S<br>13.75</a>
-                <p id="content5-ptag5">BBQ sauce, Beyond Meat Italian sausage crumble, red onions, roasted corn medley
-                    seasoned with onions, red + green peppers, jalapeño peppers + dairy-free Daiya cheeze.</p>
 
             </div>
             <div id="content-six">
