changed menu.html for mobile and tablet

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 
             <h3><img id="pizza-logo" width="8%" src="pizzalogo.png" alt="pizza-log">Okotoks Pizza</h3>
             <img id="pizza-logo-two" src="pizzalogo.png" alt="pizza-log">
+            <a href="index.html">Home</a>
             <a href="menu.html">Menu</a>
             <a href="about.html">About us</a>
             <a href="location.html">Location & Hours</a>
