Added menu page layout for dektop

--- a/menu.html
+++ b/menu.html
@@ -33,7 +33,7 @@
         <div id="content">
             <div id="heading">Okotoks Menu</div>
             <div id="content-one">
-                <h3>Start <br>your order </h3>
+                <h3>Start your order </h3>
                 <a id="contentone-atagone" href="#">Delivery</a>
                 <h4>or</h4>
                 <a id="contentone-atagtwo" href="#">Pick up</a>
@@ -41,7 +41,7 @@
             <div id="content-two">
                 <div id="content2-1">
                     <img class="content-image" id="content2-img1" src="vegpizza1.jpg" alt="veggie pizza one"><br>
-                    <h4 class="h4tag" id="content2-h4one">Garden <br>Veggie</h4><br>
+                    <h4 class="h4tag" id="content2-h4one">Garden Veggie</h4><br>
                     <div id="atag-1">
                     <a class="content-atag" id="content2-atagon" href="#">L<br>$20</a>
                     <a class="content-atag" id="content2-atagtwo" href="#">M<br>$16.50</a>
@@ -61,7 +61,7 @@
                 </div>
                 <div id="content2-3">
                     <img class="content-image" id="content4-img3" src="vegpizza3.jpg" alt="veggie pizza three"><br>
-                    <h4 class="h4tag" id="content4-h4three">Veggie <br>Korma</h4><br>
+                    <h4 class="h4tag" id="content4-h4three">Veggie Korma</h4><br>
                     <div  id="atag-3">
                     <a class="content-atag" id="content4-atag7" href="#">L<br>$21</a>
                     <a class="content-atag" id="content4-atag8" href="#">M<br>$17.50</a>
@@ -72,7 +72,7 @@
                 </div>
                 <div id="content2-4">
                     <img class="content-image" id="content4-img4" src="vegpizza4.jpg" alt="veggie pizza four"><br>
-                    <h4 class="h4tag" id="content4-h4four">Pesto<br> Vegetarian</h4><br>
+                    <h4 class="h4tag" id="content4-h4four">Pesto Vegetarian</h4><br>
                     <div  id="atag-4">
                     <a class="content-atag" id="content4-atag10" href="#">L<br>$22</a>
                     <a class="content-atag" id="content4-atag11" href="#">M<br>$18.50</a>
@@ -92,7 +92,7 @@
                 </div>
                 <div id="content2-6">
                     <img class="content-image" id="content4-img6" src="vegpizza6.jpg" alt="veggie pizza six"><br>
-                    <h4 class="h4tag" id="content4-h4six">Cheese<br>Pizza</h4><br>
+                    <h4 class="h4tag" id="content4-h4six">Cheese Pizza</h4><br>
                     <div  id="atag-6">
                     <a  class="content-atag" id="content4-atag16" href="#">L<br>$15</a>
                     <a  class="content-atag" id="content4-atag17" href="#">M<br>$13.25</a>
@@ -101,7 +101,7 @@
                 </div>
                 <div id="content2-7">
                     <img class="content-image" id="content5-img1" src="vegpizza7.jpg" alt="plant-based pizza one"><br>
-                    <h4 class="h4tag" id="content5-h4one">Plant-based Spicy Hawaiian</h4><br>
+                    <h4 class="h4tag" id="content5-h4one">Spicy Hawaiian</h4><br>
                     <div  id="atag-7">
                     <a  class="content-atag" id="content5-atag1" href="#">L<br>$21</a>
                     <a  class="content-atag" id="content5-atag2" href="#">M<br>$17.50</a>
@@ -111,7 +111,7 @@
                 </div>
                 <div id="content2-8">
                     <img class="content-image" id="content5-img2" src="vegpizza8.jpg" alt="plant-based pizza two"><br>
-                    <h4 class="h4tag" id="content5-h4two">Plant-based Mediterranean</h4><br>
+                    <h4 class="h4tag" id="content5-h4two">Mediterranean</h4><br>
                     <div  id="atag-8">
                     <a  class="content-atag" id="content5-atag4" href="#">L<br>$21</a>
                     <a  class="content-atag" id="content5-atag5" href="#">M<br>$17.50</a>
@@ -121,7 +121,7 @@
                 </div>
                 <div id="content2-9">
                     <img class="content-image" id="content5-img3" src="vegpizza9.jpg" alt="plant-based pizza three"><br>
-                    <h4 class="h4tag" id="content5-h4three">Plant-based Deluxe Pepperoni</h4><br>
+                    <h4 class="h4tag" id="content5-h4three"> Deluxe Pepperoni</h4><br>
                     <div  id="atag-9">
                     <a  class="content-atag" id="content5-atag7" href="#">L<br>$21</a>
                     <a  class="content-atag" id="content5-atag8" href="#">M<br>$18.50</a>
@@ -151,7 +151,7 @@
                 </div>
                 <div id="content2-12">
                     <img class="content-image" id="content6-img2" src="meatpizza2.jpg" alt="meat pizza two"><br>
-                    <h4 class="h4tag" id="content6-h4two">Chicken<br> Tacon</h4><br>
+                    <h4 class="h4tag" id="content6-h4two">Chicken Tacon</h4><br>
                     <div  id="atag-12">
                     <a  class="content-atag"id="content6-atag4" href="#">L<br>$22</a>
                     <a  class="content-atag" id="content6-atag5" href="#">M<br>$16.50</a>
@@ -272,6 +272,7 @@
                     <p class="content-ptag">Fresh salsa, ground beef, red onions, mozzarellafresh tomatoes + cheddar.</p>
                 </div>
             </div>
+        </div>
         <div id="footer">
 
             <h5 id="footerh5-one">@copyright2020,OkotoksPizza.ca</h5>
