Added hamburger menu

--- a/contact.html
+++ b/contact.html
@@ -22,6 +22,31 @@
 
 <body>
     <div id="container">
+        <div id="mobile-header">
+            <div id="mobile-logo">
+                <img src="pizzalogo.png" alt="image of logo">
+
+            </div>
+            <div id="mobile-spacer">
+             <h3>Okotoks Pizza</h3>
+            </div>
+            <div id="hamburger-menu">
+                <input type="checkbox" name="mobile-checkbox" id="mobile-checkbox">
+                <div id="hamburger-container">
+                    <span id="mobile-line-1" class="hamburger-line"></span>
+                    <span id="mobile-line-2" class="hamburger-line"></span>
+                    <span id="mobile-line-3" class="hamburger-line"></span>
+                </div>
+                <div id="mobile-header-menu">
+                    <a href="index.html">Home</a>
+                    <a href="menu.html">Menu</a>
+                    <a href="about.html">About us</a>
+                    <a href="location.html">Location & Hours</a>
+                    <a href="contact.html">Contact</a>
+                </div>
+ 
+            </div>
+        </div>
         <div id="header">
             <h3><img id="pizza-logo" width="8%" src="pizzalogo.png" alt="pizza-log">Okotoks Pizza</h3>
             <img id="pizza-logo-two" src="pizzalogo.png" alt="pizza-log">
