--- a/index.html
+++ b/index.html
@@ -17,10 +17,37 @@
         content="https://www.google.com/search?q=pizza+images&tbm=isch&source=iu&ictx=1&fir=bOy5OMwKTM1UEM%252CrPoPHMiEf84VrM%252C_&vet=1&usg=AI4_-kR6eBstLdK_bTMsEEijrm3Z4gKGhw&sa=X&ved=2ahUKEwiH_7D8oNPqAhUYIDQIHSjPBnwQ9QEwAXoECAoQMg&biw=1366&bih=646">
     <link rel="icon" type="image/png" href="fast-food.png" />
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@1,700&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
     <div id="container">
+        <div id="mobile-header">
+            <div id="mobile-logo">
+                <img src="pizzalogo.png" alt="image of logo">
+
+            </div>
+            <div id="mobile-spacer">
+             <h3>Okotoks Pizza</h3>
+            </div>
+            <div id="hamburger-menu">
+                <input type="checkbox" name="mobile-checkbox" id="mobile-checkbox">
+                <div id="hamburger-container">
+                    <span id="mobile-line-1" class="hamburger-line"></span>
+                    <span id="mobile-line-2" class="hamburger-line"></span>
+                    <span id="mobile-line-3" class="hamburger-line"></span>
+                </div>
+                <div id="mobile-header-menu">
+                    <a href="index.html">Home</a>
+                    <a href="menu.html">Menu</a>
+                    <a href="about.html">About us</a>
+                    <a href="location.html">Location & Hours</a>
+                    <a href="contact.html">Contact</a>
+                </div>
+ 
+            </div>
+        </div>
         <div id="header">
 
             <h3><img id="pizza-logo" width="8%" src="pizzalogo.png" alt="pizza-log">Okotoks Pizza</h3>
@@ -32,15 +59,17 @@
             <a href="contact.html">Contact</a>
         </div>
         <div id="content">
-            <div id="content-one">
+            <!-- <div id="content-one">
                 <img src="pizzachef.jpg" alt="image-one">
                 <p id="ptag-one">"We have the best pizza in the city"</p>
-                <!-- <p id="ptagone-one">"Okotoks Pizzas are made with only the freshest ingredients like mozzarella, roma tomatoes....."</p> -->
                 <iframe width="100%" src="https://www.youtube.com/embed/sv3TXMSv6Lw" frameborder="0"
                     allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen></iframe>
                 <img id=contentimage-one src="content-image.png" alt="image-two">
                 <p id="ptag-three">Everyday specials<br><a id="atagtwo-content" href="menu.html">click here</a></p>
+            </div> -->
+            <div id="content-1">
+            
             </div>
             <div id="content-two">
                 <h1>Okotoks Pizza</h1>
