Modified index.html of mobile and tablet

--- a/contact.html
+++ b/contact.html
@@ -101,31 +101,9 @@
             
             
         </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
         <div id="footer">
 
-            <h5 id="footerh5-one">@copyright2020,OkotoksPizza.ca</h5>
+            <h5 id="footerh5-one">@copyright2020,OkotoksPizza.ca<br>All rights reserved</h5>
             <div id="footerdiv-one">
                 <a href="https://www.facebook.com/"><img width="3%" src="facebookicon.png" alt="facebook icon"></a>
                 <a href="https://twitter.com/"><img width="3%" src="twittericon.png" alt="twitter icon"></a>
