--- a/index.html
+++ b/index.html
@@ -59,31 +59,50 @@
             <a href="contact.html">Contact</a>
         </div>
         <div id="content">
-            <!-- <div id="content-one">
-                <img src="pizzachef.jpg" alt="image-one">
-                <p id="ptag-one">"We have the best pizza in the city"</p>
-                <iframe width="100%" src="https://www.youtube.com/embed/sv3TXMSv6Lw" frameborder="0"
-                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen></iframe>
-                <img id=contentimage-one src="content-image.png" alt="image-two">
-                <p id="ptag-three">Everyday specials<br><a id="atagtwo-content" href="menu.html">click here</a></p>
-            </div> -->
             <div id="content-1">
-            
-            </div>
-            <div id="content-two">
-                <h1>Okotoks Pizza</h1>
+                <h2>Okotoks Pizza</h2><br>
                 <h4>Your favourite pizza shop</h4>
                 <hr id="hrtag-one">
-                <p id="contenttwo-ptagone">Bustling with warm and friendly conversation,delicious pizza.<br><br>Italian
-                    comfort food we are proud of.</p>
+                <h3>Bustling with warm and friendly conversation,delicious pizza.
+                    Italian comfort food we proud of.
+                </h3>
                 <hr id="hrtag-two">
-                <img class="condenttwoimages" id="contenttwo-imageone" src="coffee.jpg" alt="image of coffee">
-                <img class="condenttwoimages" id="contenttwo-imagetwo" src="restaurant.jpg" alt="image of restaurant">
-                <img class="condenttwoimages" id="contenttwo-imagethree" src="pizzacutting.jpg"
+
+            </div>
+            <div id="content-2">
+                <img class="condent2-images" id="content1-img1" src="coffee.jpg" alt="image of coffee">
+                <img class="condent2-images" id="content2-img1" src="restaurant.jpg" alt="image of restaurant">
+                <img class="condent2-images" id="content3-img1" src="pizzacutting.jpg" alt="image of pizza cutting">
+                <img class="condent2-images" id="content4-img1" src="pizzaeating.jpg" alt="image of pizza eating">
+
+            </div>
+            <div id="content-3">
+                <h3 id="content3-h3tagone">"Okotoks Pizzas are made with only the freshest ingredients like mozzarella, roma tomatoes,
+                    made-from-scratch sauce and even features premium toppings like Sorriso Pepperoni, salami from
+                    Valbella meats and a healthy Flax crust. You feel good about ordering it. You feel good about eating
+                    it. And you feel even better knowing we're always ready to make you more".........."<a id="content3-atagone" href="about.html">Read More</a>
+                </h3>
+                <img id="content3-img1" src="pizzaimage1.jpg" alt="image of pizza">
+            </div>
+            <div id="content-4">
+                <img id="content4-img2" src="pizzaimage2.jpg" alt="image of pizza2">
+                <h3 id="content4-h3tagone">Our pizzas are made the traditional way, thin & crispy.<br><br><br><a id="content4-atagone" href="menu.html">View our pizza menu</a></h3></h3>
+            </div>
+            <div id="content-two">
+                <div id="content2-1">
+                    <h1>Okotoks Pizza</h1>
+                    <h4>Your favourite pizza shop</h4>
+                    <hr id="hrtag-one">
+                    <p id="contenttwo-ptagone">Bustling with warm and friendly conversation,delicious pizza.<br><br>Italian
+                    comfort food we are proud of.</p>
+                    <hr id="hrtag-two">
+                    <img class="condenttwoimages" id="contenttwo-imageone" src="coffee.jpg" alt="image of coffee">
+                    <img class="condenttwoimages" id="contenttwo-imagetwo" src="restaurant.jpg" alt="image of restaurant">
+                    <img class="condenttwoimages" id="contenttwo-imagethree" src="pizzacutting.jpg"
                     alt="image of pizza cutting">
-                <img class="condenttwoimages" id="contenttwo-imagefour" src="pizzaeating.jpg"
+                    <img class="condenttwoimages" id="contenttwo-imagefour" src="pizzaeating.jpg"
                     alt="image of pizza eating">
+                </div>
                 <div id="contenttwo-two">
                     <img id="contenttwo-imagefive" src="pizzaimage1.jpg" alt="image of pizza">
                     <h3 id="contenttwo-h3tagone">"Okotoks Pizzas are made with only the freshest ingredients like mozzarella, roma tomatoes,
@@ -91,19 +110,16 @@
                         Valbella meats and a healthy Flax crust. You feel good about ordering it. You feel good about eating
                         it. And you feel even better knowing we're always ready to make you more".........."<a id="contenttwo-atagone" href="about.html">Read More</a>
                     </h3>
-                  <h3 id="contenttwo-h3tagtwo"> Our pizzas are made the traditional way, thin & crispy.<br><br><br><a id="contenttwo-atagone" href="menu.html">View our pizza menu</a></h3>
+                    <h3 id="contenttwo-h3tagtwo"> Our pizzas are made the traditional way, thin & crispy.<br><br><br><a id="contenttwo-atagtwo" href="menu.html">View our pizza menu</a></h3>
                     <img id="contenttwo-imagesix" src="pizzaimage2.jpg" alt="image of pizza2">
 
                 </div>
-
-
-
             </div>
 
         </div>
         <div id="footer">
 
-            <h5 id="footerh5-one">@copyright2020,OkotoksPizza.ca</h5>
+            <h5 id="footerh5-one">@copyright2020,OkotoksPizza.ca<br>All rights reserved.</h5>
             <div id="footerdiv-one">
                 <a href="https://www.facebook.com/"><img width="3%" src="facebookicon.png" alt="facebook icon"></a>
                 <a href="https://twitter.com/"><img width="3%" src="twittericon.png" alt="twitter icon"></a>
@@ -118,14 +134,6 @@
 
 
         </div>
-
-
-
-
-
-
-
-
     </div>
 
 </body>
