--- a/menu.html
+++ b/menu.html
@@ -16,6 +16,7 @@
         content="https://www.google.com/search?q=pizza+images&tbm=isch&source=iu&ictx=1&fir=bOy5OMwKTM1UEM%252CrPoPHMiEf84VrM%252C_&vet=1&usg=AI4_-kR6eBstLdK_bTMsEEijrm3Z4gKGhw&sa=X&ved=2ahUKEwiH_7D8oNPqAhUYIDQIHSjPBnwQ9QEwAXoECAoQMg&biw=1366&bih=646">
     <link rel="icon" type="image/png" href="fast-food.png" />
     <link rel="stylesheet" type="text/css" href="style2.css">
+    <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@1,700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@900&family=Source+Serif+Pro:ital,wght@1,900&display=swap" rel="stylesheet">
 </head>
 
@@ -62,6 +63,12 @@
                 <a id="contentone-atagone" href="#">Delivery</a>
                 <h4>or</h4>
                 <a id="contentone-atagtwo" href="#">Pick up</a>
+            </div>
+            <div id="discount">
+                <p>
+                "Half Tuesday"<br>
+                50% off on all large pizza every Tuesday
+                </p>
             </div>
             <div id="content-two">
                 <div id="content2-1">
@@ -300,7 +307,7 @@
         </div>
         <div id="footer">
 
-            <h5 id="footerh5-one">@copyright2020,OkotoksPizza.ca</h5>
+            <h5 id="footerh5-one">@copyright2020,OkotoksPizza.ca<br>All rights reserved</h5>
             <div id="footerdiv-one">
                 <a href="https://www.facebook.com/"><img width="3%" src="facebookicon.png" alt="facebook icon"></a>
                 <a href="https://twitter.com/"><img width="3%" src="twittericon.png" alt="twitter icon"></a>
